# cpp_mini_projects

./: .gitignore  CMakeLists.txt  README.md
10project/: CMakeLists.txt  main.cpp
11random/: CMakeLists.txt  main.cpp
12project/: CMakeLists.txt  main.cpp
13project/: CMakeLists.txt  main.cpp
14project/: CMakeLists.txt  main.cpp
15project/: CMakeLists.txt  add.cpp  main.cpp
16project/: CMakeLists.txt  main.cpp
17project/: CMakeLists.txt  add.h  main.cpp
18project/: CMakeLists.txt  divide.cpp  main.cpp  subtract.cpp
19project/: CMakeLists.txt  io.cpp  io.h  main.cpp
1printNameAge/: CMakeLists.txt  main.cpp
1printNameAge/.cache/clangd/index/: main.cpp.6BAB4B0A1610172B.idx
20project/: CMakeLists.txt  main.cpp
21project/: CMakeLists.txt  main.cpp
22project/: CMakeLists.txt  main.cpp
23project/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  main.cpp
24project/: CMakeLists.txt  main.cpp
25project/: CMakeLists.txt  car.cpp  car.h  main.cpp
2print_sum2#/: CMakeLists.txt  main.cpp
2print_sum2#/.cache/clangd/index/: main.cpp.3146F4A40F8EE4D7.idx
3sizeDataType/: CMakeLists.txt  main.cpp
3sizeDataType/.cache/clangd/index/: main.cpp.24364B47B5769F5E.idx
4maxlimit/: CMakeLists.txt  main.cpp
4maxlimit/.cache/clangd/index/: main.cpp.856B96880C9CEA88.idx
5primValueLimits/: main.cpp
6project/: CMakeLists.txt  main.cpp
7project/: CMakeLists.txt  main.cpp
8project/: CMakeLists.txt  main.cpp
9project/: CMakeLists.txt  main.cpp
